--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "sourceMap": true
+        "sourceMap": true,
+        "types": [
+            
+        ],
+        "lib": ["es6", "dom"]
     }
 }
